# Taurus

./: CodigoFinal.py  README.md  encoder_N20_esp.py
src/pub_sub_cpp/: package.xml
src/taurus_cartographer/: CMakeLists.txt
src/taurus_cartographer/launch/: cartographer.launch.py
src/taurus_description/: CMakeLists.txt  package.xml
src/taurus_description/launch/: display.launch.py  gazebo.launch.py
src/taurus_description/meshes/: base_castor_link.STL  caster_ball_link.STL  rueda_derecha_link.STL  rueda_izquierda_link.STL  scan_link.STL
src/taurus_nav2/: CMakeLists.txt  package.xml
src/taurus_nav2/map/: ramel.pgm
src/taurus_toolbox/: package.xml
taurus_cartographer/: CMakeLists.txt  package.xml
taurus_controller/: CMakeLists.txt  package.xml
taurus_controller/config/: taurus_controllers.yaml
taurus_controller/launch/: controller.launch.py
taurus_description/: CMakeLists.txt  package.xml
taurus_description/launch/: display.launch.py  gazebo.launch.py
taurus_description/meshes/: ball_Link.STL  base_castor_link.STL  base_link.STL  caster_ball_link.STL  der_link.STL  front_link.STL  izq_link.STL  rueda_derecha_link.STL  rueda_izquierda_link.STL  scan_link.STL  wheel_left_link.STL  wheel_right_link.STL
taurus_description/rviz/: model.rviz
taurus_description/urdf/: taurus.urdf  taurus.urdf.xacro  taurus_gazebo.xacro  taurus_ros2_control.xacro
taurus_description/worlds/: maze.world  mundo.world
taurus_nav2/: CMakeLists.txt
taurus_nav2/map/: my_map.pgm  my_map.yaml  ramel.yaml
taurus_nav2/param/: s.yaml
taurus_toolbox/: CMakeLists.txt
(+8 files in other folders)
