<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taurus_description</name>
  <version>1.0.0</version>
  <description>
    3D models of the Taurus (Maze Solver Robot)
  </description>
  <maintainer email="rvjacome@espol.edu.ec">Robinson Jacome</maintainer>
  <license>Apache 2.0</license>
  <author email="cepaquin@espol.edu.ec">Dr Pato</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>